--- a/Client/src/index.scss
+++ b/Client/src/index.scss
@@ -129,3 +129,12 @@ header {
 		resize: none;
 	}
 }
+
+.settings {
+	display: flex;
+	flex-flow: column;
+	gap: 0.5em;
+	padding: 0.5em;
+	overflow-y: auto;
+	flex: 1;
+}
